update swagger doc with auth requirements
