# api/docs/swagger.yaml
@@ -125,6 +125,8 @@ paths:
           description: Fixture not found
           schema:
             type: string
+      security:
+      - ApiKeyAuth: []
       summary: Update Fixture
       tags:
       - Fixtures
@@ -198,6 +200,8 @@ paths:
           description: Failed to update statistics
           schema:
             type: string
+      security:
+      - ApiKeyAuth: []
       summary: Update Standings
       tags:
       - Standings
@@ -218,4 +222,9 @@ paths:
       summary: Get all teams
       tags:
       - Teams
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: X-API-KEY
+    type: apiKey
 swagger: "2.0"
